fixing spacing in nav links

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -44,7 +44,7 @@
 
 @media (min-width: 375px) {
     .linksList  {
-        gap: 50px;
+        gap: 30px;
     }
 }
 
